--- a/modules/administration/pages/virtualization.adoc
+++ b/modules/administration/pages/virtualization.adoc
@@ -1,12 +1,18 @@
 [[virtualization]]
 = Virtualization
 
-{productname} supports virtualized client machines, but they are handled differently depending on which third-party virtualization provider you use.
+You can use {productname} to manage virtualized clients in addition to regular traditional or Salt clients.
+In this type of installation, a virtual host is installed on the {productname} Server to manage any number of virtual guests.
+If you choose to, you can install several virtual hosts to manage groups of guests.
+
+The range of capabilities that virtualized clients have depends on the third-party virtualization provider you choose.
 
 Xen and KVM virtualized clients can be managed directly in {productname}.
 This enables you to autoinstall virtual hosts and guests using {ay} or {kickstart}, and manage guests in the same way as you manage other clients.
 
-For VMWare virtualized clients, including vCenter/vSphere and ESXi, {productname} requires you to set up a virtual host manager, or VHM, to control the VMs.
+For VMWare virtualized clients, including VMWare vSphere, {productname} requires you to set up a virtual host manager, or VHM, to control the VMs.
+
+// So I looked it up in their docs: "VMWare vSphere is a suite of virtualization applications that includes ESXi and vCenter Server". So I think using "VMWare vSphere" implies ESXi and vCenter without having to spell them out. Happy to be proven wrong. --LKB 2019-07-10
 
 Other third-party virtualization providers are not directly supported by {productname}.
 However, if your provider allows you to export a JSON configuration file for the VM, you can upload that configuration file to {productname} and manage it with a VHM.
